# app/docs/swagger.yaml
@@ -352,7 +352,7 @@ paths:
             $ref: '#/definitions/fiber.Map'
       summary: Get all categories
       tags:
-      - Categories/Conveniences
+      - Options
   /cities:
     get:
       description: Fetches all available cities
@@ -390,7 +390,7 @@ paths:
             $ref: '#/definitions/fiber.Map'
       summary: Get all conveniences
       tags:
-      - Categories/Conveniences
+      - Options
   /countries:
     get:
       description: Fetches all available countries
@@ -581,4 +581,23 @@ paths:
       summary: Get a product by slug
       tags:
       - Products
+  /types:
+    get:
+      description: Fetches all available types
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of types
+          schema:
+            items:
+              $ref: '#/definitions/models.ProductType'
+            type: array
+        "500":
+          description: Failed to fetch types
+          schema:
+            $ref: '#/definitions/fiber.Map'
+      summary: Get all types
+      tags:
+      - Options
 swagger: "2.0"
